# brave-core

./: package-lock.json  package.json
chromium_src/chrome/browser/profiles/: pref_service_builder_utils.cc
common/extensions/api/: brave_playlists.json
components/brave_ads/common/: pref_names.cc  pref_names.h
components/definitions/: chromel.d.ts
components/playlists/browser/: BUILD.gn  playlists_controller.cc  playlists_controller.h  playlists_database.cc  playlists_database.h  playlists_download_manager.cc  playlists_download_manager.h  playlists_service.cc  playlists_service.h
